force-app/main/default/objects/LLC_BI__Matrix__c/fields/LLC_BI__Is_Single_Value__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Single_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional boolean field to bypass the matrix builder and set one value that applies to all matrix dimensions. By default, it is false.</description>
    <inlineHelpText>Select this field to bypass the matrix builder and set one value that applies to all matrix dimensions.</inlineHelpText>
    <label>Set a Single Value</label>
    <type>Checkbox</type>
</CustomField>