force-app/main/default/objects/LLC_BI__Matrix__c/fields/LLC_BI__Matrix_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Matrix_Type__c</fullName>
    <description>Users populate this required field to specify the matrix type. By default, it is blank.</description>
    <label>Matrix Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Rate Matrix</fullName>
            </value>
            <value>
                <fullName>Rate Adjustment</fullName>
            </value>
            <value>
                <fullName>Income Policy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>