force-app/main/default/objects/LLC_BI__Matrix__c/fields/LLC_BI__Strategy__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Strategy__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>The system automatically populates this field with the associated strategy when a user creates a matrix.</description>
    <label>Strategy</label>
    <referenceTo>LLC_BI__Strategy__c</referenceTo>
    <relationshipLabel>Matrices</relationshipLabel>
    <relationshipName>Matrices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>